# ProjetS8_TargetDrone

./: CMakeLists.txt  Compte-rendu Projet Target Drone Gr. D2.docx  Compte-rendu-Projet-Target-Drone-Grp-D2.docx  Dossier_technique-v1.docx  README.md  color_bebop.cpp  face.cpp  hog.cpp  image_converter.cpp  main_controller.cpp  main_controller_rectangle.cpp  main_controller（face）.cpp  maincontrollernv2.cpp
Drones_Test_Multiboot/: CMakeLists.txt  image_converter.cpp  main_controller.cpp
Drones_Test_Multiboot/include/drone_test/: keyboard_controller.h
Drones_Test_Multiboot/src/: color_bebop.cpp  image_converter.cpp  main_controller.cpp
deep_learning/: CMakeLists.txt  readme.txt  setup.py
deep_learning/include/deep_learning/: image_converter.cpp  main_controller_rectangle.cpp
deep_learning/src/: img_sub.py  position.txt  real_time_object_detection.py
deep_learning/src/Drones_Test_Multiboot/: CMakeLists.txt
deep_learning/src/Drones_Test_Multiboot/include/drone_test/: keyboard_controller.h
deep_learning/src/Drones_Test_Multiboot/src/: image_converter.cpp  keyboard_controller.cpp  main_controller_nv2.cpp  main_controller_rectangle.cpp
deep_learning/src/deep_learning/: package.xml  readme.txt
deep_learning/src/deep_learning/include/deep_learning/: util.py
deep_learning/src/deep_learning/src/: img_sub.py  position.txt  real_time_object_detection.py  rectangle.txt
src/: image_converter.cpp  main_controller.cpp
